@@ -1,3 +1,9 @@
+2005-02-14  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/awt/peer/gtk/GtkArg.java,
+	gnu/java/awt/peer/gtk/GtkArgList.java:
+	Removed.
+
 2005-02-14  Craig Black  <craig.black@aonix.com>
 
 	* gnu/java/awt/peer/gtk/GtkCheckboxMenuItem.java
